# etmem

./: CMakeLists.txt  README-en.md  README.en.md  README.md  etmem.spec
License/: NOTICE
conf/: example_conf.yaml
etmem/: CMakeLists.txt
etmem/License/: Project License  Third_Party_Open_Source_Software_Notice.md
etmem/conf/: cslide_conf.yaml  damon_conf.yaml  example_conf.yaml  slide_conf.yaml  thirdparty_conf.yaml
etmem/inc/etmem_inc/: etmem_common.h  etmem_project.h  etmem_rpc.h
etmem/inc/etmemd_inc/: etmemd.h  etmemd_common.h  etmemd_damon.h  etmemd_engine.h  etmemd_exp.h  etmemd_file.h  etmemd_log.h  etmemd_memdcd.h  etmemd_migrate.h  etmemd_pool_adapter.h  etmemd_project_exp.h  etmemd_scan.h  etmemd_scan_exp.h  etmemd_scan_export.h  etmemd_slide.h  etmemd_task.h  etmemd_task_exp.h  etmemd_thirdparty_export.h
etmem/src/etmem_src/: etmem.c  etmem_engine.c  etmem_obj.c
etmem/src/etmemd_src/: etmemd_common.c  etmemd_cslide.c  etmemd_damon.c  etmemd_engine.c  etmemd_file.c  etmemd_memdcd.c  etmemd_migrate.c  etmemd_pool_adapter.c  etmemd_project.c  etmemd_rpc.c  etmemd_scan.c  etmemd_scan.version  etmemd_slide.c  etmemd_task.c  etmemd_thirdparty.c  etmemd_threadtimer.c
etmem/test/: CMakeLists.txt  test.sh
etmem/test/common/: test_common.c  test_common.h
etmem/test/conf/conf_cslide/: eng.config  proj.config  task.config
etmem/test/conf/conf_slide/: config_file
etmem/test/etmem_common_func_llt_test/: CMakeLists.txt  etmem_common_func_llt.c  test_systemd_service.sh
etmem/test/etmem_cslide_ops_llt_test/: CMakeLists.txt  cslide_showpage_test.sh  etmem_cslide_ops_llt.c  mem_access.c
etmem/test/etmem_log_ops_llt_test/: CMakeLists.txt  etmem_log_ops_llt.c
etmem/test/etmem_migrate_ops_llt/: CMakeLists.txt  etmem_migrate_ops_llt.c
etmem/test/etmem_migrate_ops_llt_test/: CMakeLists.txt  etmem_migrate_ops_llt.c
etmem/test/etmem_project_ops_llt_test/: CMakeLists.txt  etmem_project_ops_llt.c
etmem/test/etmem_scan_ops_export_llt_test/: CMakeLists.txt  etmem_scan_ops_export_llt.c
etmem/test/etmem_scan_ops_llt_test/: CMakeLists.txt  etmem_scan_ops_llt.c
etmem/test/etmem_slide_ops_llt_test/: CMakeLists.txt  etmem_slide_ops_llt.c  mem_swaptest.c  test_slide_ops.sh
etmem/test/etmem_socket_ops_llt_test/: CMakeLists.txt  etmem_socket_ops_llt.c
etmem/test/etmem_task_ops_llt_test/: CMakeLists.txt  etmem_task_ops_llt.c
etmem/test/etmem_thirdparty_ops_llt_test/: CMakeLists.txt  etmem_thirdparty_ops_llt.c  my_engine.c
etmem/test/etmem_threadpool_ops_llt_test/: CMakeLists.txt  etmem_threadpool_ops_llt.c
etmem/test/etmem_timer_ops_llt_test/: CMakeLists.txt  etmem_timer_ops_llt.c
etmem/test/project/: CMakeLists.txt
inc/etmem_inc/: etmem.h  etmem_common.h  etmem_engine.h  etmem_obj.h  etmem_task.h
inc/etmemd_inc/: etmem_thirdparty.h  etmemd.h  etmemd_common.h  etmemd_cslide.h  etmemd_engine.h  etmemd_engine_exp.h  etmemd_exp.h  etmemd_file.h  etmemd_migrate.h  etmemd_pool_adapter.h  etmemd_project.h  etmemd_rpc.h  etmemd_scan.h  etmemd_scan_exp.h  etmemd_slide.h  etmemd_task.h  etmemd_task_exp.h  etmemd_thirdparty.h  etmemd_threadpool.h  etmemd_threadtimer.h
memRouter/: CMakeLists.txt  README.md
memRouter/include/: memdcd_cmd.h  memdcd_daemon.h  memdcd_log.h  memdcd_message.h  memdcd_migrate.h  memdcd_policy.h  memdcd_policy_threshold.h  memdcd_process.h
memRouter/src/: memdcd.c  memdcd_cmd.c  memdcd_daemon.c  memdcd_log.c  memdcd_migrate.c  memdcd_policy.c  memdcd_policy_threshold.c  memdcd_process.c
memRouter/test/: CMakeLists.txt  test.sh
memRouter/test/Unit/: CMakeLists.txt
memRouter/test/Unit/memdcd_cmd_llt_test/: CMakeLists.txt  memdcd_cmd_llt.c
memRouter/test/Unit/memdcd_daemon_llt_test/: CMakeLists.txt  memdcd_daemon_llt.c
memRouter/test/Unit/memdcd_log_llt_test/: CMakeLists.txt  memdcd_log_llt.c
memRouter/test/Unit/memdcd_migrate_llt_test/: CMakeLists.txt  memdcd_migrate_llt.c
memRouter/test/Unit/memdcd_policy_llt_test/: CMakeLists.txt  memdcd_policy_llt.c
memRouter/test/Unit/memdcd_process_llt_test/: CMakeLists.txt  memdcd_process_llt.c
memRouter/test/Unit/memdcd_threshold_llt_test/: CMakeLists.txt  memdcd_threshold_llt.c
memRouter/test/config/: policy_threshold.json  policy_threshold_0KB.json  policy_threshold_80KB.json  policy_threshold_B.json  policy_threshold_GB.json  policy_threshold_MB.json  policy_threshold_invalid1.json  policy_threshold_invalid2.json  policy_threshold_invalid_key_policy.json  policy_threshold_invalid_key_threshold.json  policy_threshold_invalid_key_type.json  policy_threshold_invalid_key_unit.json  policy_threshold_invalid_unit.json  policy_threshold_invalid_unit_str.json
memRouter/test/stub/: alloc_memory.c  alloc_memory.h
memRouter/test/test_driver/: memdcd_daemon.c  test_driver.c
src/etmem_src/: etmem.c  etmem_common.c  etmem_engine.c  etmem_obj.c  etmem_project.c  etmem_rpc.c  etmem_task.c
src/etmemd_src/: etmemd.c  etmemd_common.c  etmemd_cslide.c  etmemd_engine.c  etmemd_file.c  etmemd_log.c  etmemd_migrate.c  etmemd_pool_adapter.c  etmemd_project.c  etmemd_rpc.c  etmemd_scan.c  etmemd_slide.c  etmemd_task.c  etmemd_thirdparty.c  etmemd_threadpool.c  etmemd_threadtimer.c
userswap/: CMakeLists.txt  README.md  configure.sh
userswap/include/: uswap_api.h  uswap_log.h  uswap_server.h
userswap/src/: lib_uswap.c  uswap_log.c  uswap_server.c
userswap/test/: CMakeLists.txt  test.sh
userswap/test/userswap_common_func_llt_test/: CMakeLists.txt  userswap_common_func_llt.c
userswap/test/userswap_log_llt_test/: CMakeLists.txt  userswap_log_llt.c
userswap/test/userswap_server_llt_test/: CMakeLists.txt  userswap_server_llt.c
